--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
+    "@mui/x-data-grid-generator": "^7.12.0",
+    "@mui/x-data-grid-pro": "^7.12.0",
     "final-form": "^4.20.10",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
